# feishu-docs-drive-supplement

./: .env.feishu.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.feishu.md  README.md  README.zh-CN.md  SETUP.md  claude_desktop_config.json.example  config.toml.example  pyproject.toml
docs/: chat-integration-guide.md  feishu-capability-overview.md  local-claude-import.md  local-claude-import.zh-CN.md  mcp-auto-discovery.md  mcp-configuration.md  scopes.md  scopes.zh-CN.md
scripts/: install_feishu_skill.py
skills/feishu/: SKILL.md
src/cc_feishu/: chat_router.py  cli.py  config.py  errors.py
src/cc_feishu/auth/: __init__.py  token_provider.py
src/cc_feishu/client/: __init__.py  http.py
src/cc_feishu/mcp/: __init__.py  manifest.json  server.py  tools.py
src/cc_feishu/providers/: __init__.py
src/cc_feishu/scripts/: auth_setup.py  auth_setup.py.backup
src/cc_feishu/services/: __init__.py  bitable.py  docs.py  drive.py  messages.py  sheets.py  slides.py  upload.py
tests/: test_chat_router.py  test_mcp_server.py  test_services.py  test_validate.py
