[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feishu-docs-drive-supplement"
version = "0.1.0"
description = "Feishu Docs, Drive, Sheets, and Bitable supplement for cc-connect"
readme = "README.feishu.md"
requires-python = ">=3.10"
authors = [{ name = "Maintainers" }]
dependencies = [
  "requests>=2.31.0",
  "tomli>=2.0.1; python_version < \"3.11\"",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
feishu = "cc_feishu.cli:main"
feishu-auth-setup = "cc_feishu.scripts.auth_setup:main"
cc-feishu-mcp = "cc_feishu.mcp.server:main"
cc-feishu-chat = "cc_feishu.chat_router:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
